refact system layout, not tested